--- a/package.json
+++ b/package.json
@@ -1,11 +1,7 @@
 {
-  "name": "discord-bot",
-  "version": "1.0.0",
-  "description": "Discord bot for SitePoint",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Michiel Mulders",
-  "license": "ISC"
+  "name": "discord-vote-bot",
+  "description": "Discord Vote Bot for my personal Discord server",
+  "dependencies": {
+    "discord.js": "^11.5.1"
+  }
 }
