--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "discord-vote-bot",
   "description": "Discord Vote Bot for my personal Discord server",
   "dependencies": {
-    "discord.js": "^11.5.1"
+    "discord.js": "^11.5.1",
+    "eslint": "^6.6.0"
   }
 }
