add prettier file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,9 +19,8 @@
         "comma-dangle": ["error", "always-multiline"],
         "comma-spacing": ["error", { "before": false, "after": true }],
         "comma-style": ["error", "last"],
-        "curly": ["error", "multi-line", "consistent"],
         "dot-location": ["error", "property"],
-        "eol-last": ["error", "never"],
+        "eol-last": ["error", "always"],
         "func-names": ["error", "always"],
         "handle-callback-err": ["error", "error"],
         "indent": ["error", "tab"],
