--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
-    "eslint": "^6.6.0"
+    "eslint": "^6.6.0",
+    "puppeteer": "^2.0.0"
   }
 }
