--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "discord-vote-bot",
-  "description": "Discord Vote Bot for my personal Discord server",
-  "main": "bot.js",
-  "dependencies": {
-    "discord.js": "^11.5.1",
-    "dotenv": "^8.2.0",
-    "eslint": "^6.6.0",
-    "puppeteer": "^2.0.0"
-  }
+   "name": "discord-rust-bot",
+   "description": "Discord Rust Bot",
+   "main": "bot.js",
+   "dependencies": {
+      "discord.js": "^11.5.1",
+      "dotenv": "^8.2.0",
+      "eslint": "^6.6.0",
+      "puppeteer": "^2.0.0"
+   }
 }
